# timeout-trait

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: delay.rs  delay_impls.rs  duration.rs  fake_impls.rs  lib.rs  mock.rs  prelude.rs  std_impls.rs  tick_impl.rs  timeout.rs  utils.rs
